# rust-webshop

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
migrations/2022-12-29-191043_create_product/: down.sql  up.sql
migrations/2022-12-29-201051_create_item/: down.sql  up.sql
migrations/2022-12-29-202210_create_user/: up.sql
migrations/2022-12-30-203458_alter_product_add_price/: down.sql  up.sql
src/: configuration.rs  ext_traits.rs  lib.rs  main.rs  schema.rs
src/api/: login.rs  mod.rs  products.rs  users.rs
src/database/: mod.rs  models.rs
static/: admin.css  admin.js  bootstrap.js  index.css  login.css  login.js  main.css
templates/: admin.html.hbs  bootstrap.html.hbs  index.html.hbs  login.html.hbs
templates/components/: common-head.html.hbs  footer.html.hbs  header.html.hbs
templates/error/: 401.html.hbs
