[package]
name = "webshop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
strip = true
codegen-units = 1

[profile.release-size]
inherits = "release"
opt-level = "z"

[profile.optimized]
inherits = "release"
lto = false
codegen-units = 16

[lib]
name = "webshop_lib"
path = "src/lib.rs"

[[bin]]
name = "webshop"
path = "src/main.rs"

[dependencies]
rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["handlebars"] }
diesel = { version = "1.4.8", features = ["postgres"]}
diesel_migrations = "1.4.0"
dotenvy = "0.15.6"
bcrypt = "0.13.0"

[dependencies.rocket]
version = "0.5.0-rc.2"
features = ["json", "secrets"]

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.2"
features = ["diesel_postgres_pool"]
